--- a/src/style.css
+++ b/src/style.css
@@ -155,7 +155,7 @@
     }
 
     .navigation .navArea ul li a {
-        color: #000;
+        color: #fff;
         font-size: 2em;
         letter-spacing: 2px;
     }
